Merged revisions 16120-16123 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.2.x
........
  r16120 | dirk.olmes | 2009-11-26 13:01:24 +0100 (Thu, 26 Nov 2009) | 1 line
  
  MULE-4606 (InMemoryObjectStore throws ClassCastException)
........
  r16121 | dirk.olmes | 2009-11-26 13:28:42 +0100 (Thu, 26 Nov 2009) | 1 line
  
  MULE-4430 (Possible Bug InMemoryObjectStore): expiring an unbounded object store would purge all entries. This is fixed, added a test case.
........
  r16122 | dirk.olmes | 2009-11-27 12:32:17 +0100 (Fri, 27 Nov 2009) | 2 lines
  
  adjust the javadocs to reality
........
  r16123 | dirk.olmes | 2009-11-27 13:33:06 +0100 (Fri, 27 Nov 2009) | 1 line
  
  Thread safety fixes
........


git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x@16124 bf997673-6b11-0410-b953-e057580c5b09